# tree-sitter-yarn-spinner

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  NVIM_SETUP.md  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  install-nvim.sh  nvim-config-example.lua  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: crates-publish.yml  npm-publish.yml  pypi-publish.yml
bindings/c/: tree-sitter-yarn-spinner.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_yarn_spinner/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterYarnSpinner/: yarn_spinner.h
bindings/swift/TreeSitterYarnSpinnerTests/: TreeSitterYarnSpinnerTests.swift
bindings/zig/: root.zig
queries/: README.md  folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
